Navbar Search button alignment fix

--- a/assets/src/sass/4-layouts/_header.scss
+++ b/assets/src/sass/4-layouts/_header.scss
@@ -17,7 +17,7 @@
 
 .navigation__form__button{
 	position: relative;
-	top: 3px;
+	top: 4px;
 	left: 5px;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .service__advertising{
-	max-width : 300px;
+	max-width: 300px;
 	display: flex;
 	align-items: center;
 
@@ -121,7 +121,7 @@
 }
 
 .service__multimedia{
-	max-width : 300px;
+	max-width: 300px;
 	display: flex;
 	align-items: center;
 
@@ -147,7 +147,7 @@
 }
 
 .service__photography{
-	max-width : 300px;
+	max-width: 300px;
 	display: flex;
 	align-items: center;
 
